# puppet_forge_updates

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  Release.toml  deny.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  first-interaction.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: general.instructions.md
.github/workflows/: ci.yml  labeler.yml  release-drafter.yml  welcome.yml
assets/: Puppetfile_not_ok  Puppetfile_ok
src/: lib.rs  main.rs  puppet_module.rs
tests/: cli.rs  forge_api.rs
