[package]
name = "puppet_forge_updates"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.22", features = ["blocking", "json", "rustls-tls"] }
colored = "3.0"
proc-macro2 = "1.0.66"
openssl-sys = "0.9.90"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
